--- a/webStyle.css
+++ b/webStyle.css
@@ -9,41 +9,45 @@ ul
     list-style-type:disc;
     font-family: 'PingFang TC','微軟正黑體',Georgia, 'Times New Roman', Times, serif;
 }
-.bar
-{
-    position: fixed;
-    opacity: 0.95;
-    color: #fff;
-    font-size: 2em;
-    background-color: lightpink;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 3rem;;
-    z-index: 9;
-}
+
 
 .bar div ul
 {
+    font-size: 2em;
     position: fixed;
-    top: 10px;
+    opacity: 0.95;
+    background-color: lightpink;
+    overflow: hidden;
+    top: 0px;
     right: 0px;
+    width: 100%;
+    z-index: 9;
     margin:0;
     padding:0;
     list-style-type:none;
 }
 .bar div ul li
 {
-    width:150px;
-    font-size: 1.5rem;
-    text-align:center;
+    display: block;
     float: right;
+    text-align: center;
+    color:#fff;
+    font-size: 1.5rem;
+    border: 1px;
+    padding: 9px;
 }
 .bar div ul li a
 {
+    
+    text-align: center;
     text-decoration:none;
     color:#fff;
 }
+.bar div ul li a:hover 
+{
+    background-color: #fff;
+    color: lightpink;
+  }
 
 .mypic
 {
